Uses Long.valueOf to improve overall performance
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/ognl/trunk@1430156 13f79535-47bb-0310-9956-ffa450edef68